# ImageKit

./: .gitignore  CMakeLists.txt
cmake/: LibrariesList.cmake  LinkLibraries.cmake  ProductConfig.cmake  Target.cmake
src/Application/ImageCore/: ImageCore.cmake
src/Application/ImageKit/: Application.cpp  Application.h  ImageKit.cmake  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mediator.cpp  Mediator.h  main.cpp
src/Application/ImageKitCore/: ImageKitCore.cmake
src/Application/ImageKitCore/Core/: ImageKitCore.cpp  ImageKitCore.h  ImageKitEffectApplier.cpp  ImageKitIO.cpp  ImageKitUndo.cpp
src/Application/ImageKitCore/Interfaces/: IImageKitCore.h  IImageKitEffectApplier.h  IImageKitIO.h  IImageKitUndo.h
src/Application/ImageKitCore/Undo/: UndoItem.h  UndoManager.cpp  UndoManager.h
src/Application/ImageKitPlugins/ImageKitEffects/: ImageKitEffects.cmake  ImageKitEffectsPlugin.cpp  ImageKitEffectsPlugin.h
src/Application/ImageKitPlugins/ImageKitFactory/: ImageKitFactory.cmake  ImageKitFactory.cpp  ImageKitFactory.h
src/Application/ImageKitPlugins/ImageKitUtil/: ImageKitActionHandlerList.cpp  ImageKitActionHandlerList.h  ImageKitUtil.cmake
src/Application/ImageKitPlugins/Interfaces/: ActionType.h  IImageKitActionHandler.h  IImageKitActionRequester.h  IPlugin.h  IPluginsController.h  ImageKitAction.h  ImageKitPluginsInt.cmake  ObjectConnectorID.cpp  ObjectConnectorID.h  PluginType.h
src/Application/ImageKitUI/: ImageKitUI.cmake  ObjectsConnectorID.cpp  ObjectsConnectorID.h
src/Application/ImageKitUI/Engine/: ControllerUI.cpp  ControllerUI.h  PluginsController.cpp  PluginsController.h
src/Core/Interfaces/: CoreInt.cmake  DataImageImpl.h  IDataImage.h  IDataImageFactory.h
src/Core/MediaTypes/: CoreMediaTypes.cmake  DataImageCV.cpp  DataImageCV.h  DataImageFactory.cpp  DataImageFactory.h  DataImageQt.cpp  DataImageQt.h
src/Core/Types/: CopyMode.h  CoreTypes.cmake  ImageInfo.h
src/Core/Util/: CoreUtil.cmake  DataConversion.cpp  DataConversion.h
src/Proc/Interfaces/: IEffect.h  IEffectCreator.h  IEffectOneInput.h  IEffectTwoInput.h  IEffectVarInput.h  IEffectsFactory.h  ProcInt.cmake
src/Proc/ProcUtil/: ProcUtil.cmake
src/Proc/SettingsEffect/: SettingsEffect.cmake  SettingsEffectBase.h
src/Util/: ObjectsConnector.cpp  ObjectsConnector.h  Util.cmake
(+32 files in other folders)
